delete not necessary stuff from /pandoc

--- a/rmd-paper.html
+++ b/rmd-paper.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <header class="article-meta">
-<p class="date">10 February, 2022</h3>
+<p class="date">15 February, 2022</h3>
 <p class="published">Working paper.</h3>
 <p class="code-repo">Access the code at <a
 href="https://github.com/ygalanak/DataAnalysisTemplate"
@@ -94,7 +94,7 @@ accusantium doloremque laudantium, totam rem aperiam (see Figure <a
 href="#fig:mpg-plot">1</a>), eaque ipsa quae ab illo inventore veritatis
 et quasi architecto beatae vitae dicta sunt explicabo.</p>
 <p><span class="math display">\[
-\text{This is a test} = \beta_1 x_1 + \epsilon
+\text{This is a test} = \beta_1 x_1 + \varepsilon
 \]</span></p>
 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
 fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
